# crypto-market-data-platform

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  DOCUMENTATION_REVIEW.md  Dockerfile  Dockerfile.dev  LICENSE  Makefile  README.md  REVIEW.md  dev.Dockerfile  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  index.html  mkdocs.yml  pyproject.toml  requirements.dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: benchmark.yml  ci.yml  docker.yml  docs.yml  provider-smoke.yml
architecture/: index.html
benchmark-design/: index.html
benchmarks/design-rationale/: index.html
benchmarks/provider-selection/: index.html
data-model/: index.html
deploy/cloud/: index.html
deploy/self-hosted/: index.html
docs/: api-reference.md  architecture.md  benchmark-design.md  data-model.md  getting-started.md  index.md  lessons-from-bitfinex-integration.md  lessons-from-kucoin-integration.md  next-steps.md  performance-notes.md  performance.md  philosophy.md  providers.md  roadmap.md  smoke-testing.md  storage-e2e.md  troubleshooting.md  upgrading.md  validation-strategy.md
docs/benchmarks/: design-rationale.md  provider-selection.md
docs/deploy/: cloud.md  self-hosted.md
docs/reference/: cli.md  http-api.md  index.html  parquet-schema.md  python-api.md  validation-rules.md
frontend/: .dockerignore  .env.local.example  Dockerfile  Dockerfile.dev  package-lock.json  package.json  tailwind.config.ts  test-setup.ts  vitest.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/datasets/: page.tsx
frontend/components/: CandleTable.tsx  CandlestickChart.tsx  ErrorBoundary.tsx  FundingRateChart.tsx  FundingRateTable.tsx  Skeleton.tsx
frontend/lib/: api.ts  auth-context.tsx  auth.ts  schemas.ts  types.ts
getting-started/: index.html
infra/: .gitignore  compute.tf  keyvault.tf  main.tf  monitoring.tf  network.tf  outputs.tf  variables.tf
lessons-from-bitfinex-integration/: index.html
lessons-from-kucoin-integration/: index.html
next-steps/: index.html
nginx/: Dockerfile  nginx.conf
performance/: index.html
performance-notes/: index.html
philosophy/: index.html
providers/: index.html
reference/: cli.md  http-api.md  index.html  overview.md  parquet-schema.md  python-api.md  validation-rules.md
roadmap/: index.html
scripts/: benchmark_pipeline.py  check_drift.py  generate-dev-cert.sh  provider_smoke.py
scripts/smoke/: __main__.py  config.py  parsers.py  runner.py
search/: search_index.json
smoke-testing/: index.html
src/cmpd/: config.py
src/crmd_platform/: __init__.py  client.py  config.py
src/crypto_market_data_platform/: config.py
storage-e2e/: index.html
tests/: conftest.py  test_bitfinex_provider.py  test_cli.py  test_fake_provider.py  test_funding_rate_validation.py  test_funding_rate_writer.py  test_kucoin_provider.py  test_security.py  test_validation.py
tests/benchmark/: test_benchmark.py
tests/cli/: test_cli.py  test_query.py
tests/fixtures/: bitfinex_ohlc.json  bitstamp_ohlc.json  bybit_ohlc.json  coinbase_ohlc.json  gateio_ohlc.json  gemini_ohlc.json  htx_ohlc.json  kraken_ohlc.json  kucoin_ohlc.json  mexc_ohlc.json  okx_ohlc.json
tests/ingestion/: test_ingestion_services.py
tests/integration/: test_azure_integration.py
tests/properties/: test_patterns_properties.py  test_storage_properties.py  test_validation_properties.py
tests/providers/: test_bitfinex_provider.py  test_bitstamp_provider.py  test_bybit_provider.py  test_coinbase_provider.py  test_fake_provider.py  test_gateio_provider.py  test_gemini_provider.py  test_htx_provider.py  test_kraken_provider.py  test_kucoin_provider.py  test_mexc_provider.py  test_okx_provider.py
tests/server/: test_server.py  test_server_config.py
tests/storage/: test_azure_helpers.py  test_azure_placeholder.py  test_azure_writer.py  test_backend.py  test_cloud_backends.py  test_funding_rate_writer.py  test_parquet_merge.py  test_parquet_writer.py
troubleshooting/: index.html
upgrading/: index.html
validation-strategy/: index.html
(+138 files in other folders)
