[project]
name = "crmd-platform"
version = "0.1.0"
requires-python = ">=3.12"
description = "CrMD Platform — local-first crypto market data ingestion, validation, storage, and query platform."
dependencies = [
    "pyarrow==24.0.0",
    "duckdb==1.5.3",
    "typer==0.26.1",
    "fastapi==0.136.3",
    "uvicorn[standard]==0.48.0",
    "urllib3==2.7.0",
]

[project.optional-dependencies]
test = [
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "httpx==0.28.1",
    "hypothesis==6.155.1",
]
lint = [
    "ruff==0.15.15",
    "mypy==2.1.0",
    "pyarrow-stubs==20.0.0.20251215",
]
docs = [
    "mkdocs-material==9.7.6",
]
azure = [
    "adlfs==2026.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short -x"
markers = [
    "azure_integration: requires Azurite or a real Azure account (skipped automatically when AZURITE_CONNECTION_STRING is unset)",
]

[tool.mypy]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/benchmark/*"]

[tool.coverage.report]
show_missing = true

[project.scripts]
crmd = "crmd_platform.cli.main:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]