[project]
name = "crmd-platform"
version = "0.1.0"
requires-python = ">=3.12"
description = "CrMD Platform — crypto market data ingestion, validation, storage, and query platform. Supports local and cloud deployments."
dependencies = [
    "urllib3>=2.7.0",
]

[project.optional-dependencies]
local = [
    "duckdb>=1.5.3",
    "pyarrow>=24.0.0",
]
remote = [
    "httpx>=0.28.1",
]
server = [
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.48.0",
    "crmd-platform[local]",
]
cli = [
    "crmd-platform[local]",
    "typer>=0.26.1",
]
test = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "httpx>=0.28.1",
    "hypothesis>=6.155.1",
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.48.0",
    "typer>=0.26.1",
    "crmd-platform[local]",
]
lint = [
    "ruff>=0.15.15",
    "mypy>=2.1.0",
    "pyarrow-stubs>=20.0.0.20251215",
]
docs = [
    "mkdocs-material>=9.7.6",
]
azure = [
    "adlfs>=2024.7.0",
    "azure-identity>=1.16.0",
]
s3 = [
    "s3fs>=2024.7.0",
]
gcs = [
    "gcsfs>=2024.7.0",
]
all = [
    "crmd-platform[local]",
    "crmd-platform[remote]",
    "crmd-platform[server]",
    "crmd-platform[cli]",
    "crmd-platform[azure]",
    "crmd-platform[s3]",
    "crmd-platform[gcs]",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short -x"
markers = [
    "azure_integration: requires Azurite or a real Azure account (skipped automatically when AZURITE_CONNECTION_STRING is unset)",
]

[tool.mypy]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/benchmark/*"]

[tool.coverage.report]
show_missing = true

[project.scripts]
crmd = "crmd_platform.cli.main:app"

[tool.setuptools.packages.find]
where=["src"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
